# ZKP_C_coloring

./: .gitignore  BENCHMARKING.md  Cargo.toml  README.md  build.ps1  run-benchmark.ps1  run-terminal-ui.ps1  run-web-ui.ps1
docs/: BENCHMARK_GUIDE.md
src/: lib.rs  main.rs
src/crypto/: hash.rs  merkle.rs  mod.rs  polynomial.rs
src/graph/: coloring.rs  graph.rs  mod.rs  tournament.rs
src/protocol/: messages.rs  mod.rs  prover.rs  verifier.rs
src/stark/: constraints.rs  fri.rs  mod.rs  prover.rs
src/ui/: mod.rs
src/ui/web/: index.html  merkle.html  triads.html
src/utils/: mod.rs  permutation.rs  random_graph.rs  serialization.rs
tests/: protocol_flow.rs  protocol_stress.rs
