[package]
name = "zkp_c_coloring"
version = "0.1.0"
edition = "2021"

[features]
default = []
stress-tests = []

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.5"
sha3 = "0.10"
digest = "0.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
ark-std = "0.4"
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
fxhash = "0.2"
bitvec = "1.0"
arrayvec = "0.7"
smallvec = "1.11"
rayon = "1.7"
crossbeam = "0.8"
hex = "0.4"
toml = "0.8"
